# boun-mis-citations

./: .gitignore  1-citation-analyzer.py  3-gemini-parser.py  CLAUDE.md  LICENSE.md  README.md  citation_parser.py  faculty_scraper.py  html-download.py  html_scrape.py  json_parse.py  main.py  new-parser.py  notes.txt  output.csv  output.xlsx  parsed_data.json  pyproject.toml  requirements.txt  ultimate_json_parser.py  ultimate_scraper_v1.py
citation_analysis_output/: duplicate_report.txt
html_output/: mis.bogazici.edu.tr_content_ali-tukel.html  mis.bogazici.edu.tr_content_asli-sencer.html  mis.bogazici.edu.tr_content_aslihan-nasir.html  mis.bogazici.edu.tr_content_aysun-bozanta.html  mis.bogazici.edu.tr_content_bertan-badur.html  mis.bogazici.edu.tr_content_bilgin-metin.html  mis.bogazici.edu.tr_content_hande-turker.html  mis.bogazici.edu.tr_content_n-ziya-perdahci.html  mis.bogazici.edu.tr_content_nazim-taskin.html  mis.bogazici.edu.tr_content_sona-mardikyan.html  mis.bogazici.edu.tr_content_zuhal-tanrikulu.html
scope/: field-names.txt  skeleton.html
scope/urls/: base.txt  urls.txt
scraper/: exporter.py  faculty_scraper.py
