[project]
name = "boun-mis-citations"
version = "1.0.0"
description = "Scrapes and analyzes faculty citations from Bogazici University MIS department website"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tqdm>=4.66.0",
    "pandas>=3.0.3",
    "openpyxl>=3.1.5",
]
